add our work section

--- a/index.html
+++ b/index.html
@@ -142,6 +142,39 @@
                 </div>
             </div>
         </section>
+        <!--our work section-->
+        <section>
+            <div class="mt-10 container mx-auto mb-5">
+                <!--title-->
+                <div class="text-center">
+                    <a class="btn  font-semi  rounded-full bg-white mb-4"><i class="fa-solid fa-arrow-right    rounded-full   text-black"></i>How we works </a>
+                    <h1 class="font-bold text-3xl text-black mb-5">Our Works Process</h1> 
+                    <p class="lg:w-7/12 mx-auto"> Define the scope of the project, including the size, style, and features of the home. Determine your needs, wants, and priorities.</p>
+                </div>
+                <div class="grid grid-cols-1 lg:grid-cols-4 gap-5 p-6 mt-8">
+                    <div class=" rounded-lg p-5 bg-[#E7C1D3]">
+                        <img src="assets/concept.png" class="mb-4">
+                        <h4 class="font-semibold text-xl text-black mb-3">Concept</h4>
+                        <p class="text-[#494949]">The primary function of a house is to provide shelter from the elements and a safe environment for its occupants. This involves designing a structure that is durable, weather-resistant, and secure</p>
+                    </div>
+                    <div class=" rounded-lg p-5 bg-[#EFDA6E]">
+                        <img src="assets/flow-chart.png" class="mb-4">
+                        <h4 class="font-semibold text-xl text-black mb-3">Design Process</h4>
+                        <p class="text-[#494949]">The aesthetic concept of a house is often influenced by its architectural style, which could range from traditional to modern, minimalist to ornate. The style reflects the personal taste of the homeowner and the cultural or geographical context.</p>
+                    </div>
+                    <div class=" rounded-lg p-5 bg-[#A4DAC3]">
+                        <img src="assets/vision.png" class="mb-4">
+                        <h4 class="font-semibold text-xl text-black mb-3">Supervision</h4>
+                        <p class="text-[#494949]">A "supervision home" typically refers to a home that is constructed with a high level of oversight, ensuring that every aspect of the building process is meticulously managed and monitored</p>
+                    </div>
+                    <div class=" rounded-lg p-5 bg-[#77AAEA]">
+                        <img src="assets/budget-planning.png" class="mb-4">
+                        <h4 class="font-semibold text-xl text-black mb-3">Budget Planning</h4>
+                        <p class="text-[#494949]">Start by clearly defining what you want from your new home. Consider the size, style, number of rooms, special features, and any unique requirements you may have.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!--main section end-->
     
