--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <main class="bg-gray-100">
         <!--design section-->
         <section>
-            <div class="relative ">
+            <div class="relative  ">
                 <div class=" lg:flex absolute border-2 border-dashed py-5 top-2 left-16 hidden">
                     <img src="assets/Vector.png">
                 </div>
@@ -142,38 +142,94 @@
                 </div>
             </div>
         </section>
-        <!--our work section-->
-        <section>
-            <div class="mt-10 container mx-auto mb-5">
+              <!--our work section-->
+              <section>
+                <div class="mt-10 container mx-auto mb-5">
+                    <!--title-->
+                    <div class="text-center">
+                        <a class="btn  font-semi  rounded-full bg-white mb-4"><i class="fa-solid fa-arrow-right    rounded-full   text-black"></i>How we works </a>
+                        <h1 class="font-bold text-3xl text-black mb-5">Our Works Process</h1> 
+                        <p class="lg:w-7/12 mx-auto"> Define the scope of the project, including the size, style, and features of the home. Determine your needs, wants, and priorities.</p>
+                    </div>
+                    <div class="grid grid-cols-1 lg:grid-cols-4 gap-5 p-6 mt-8">
+                        <div class=" rounded-lg p-5 bg-[#E7C1D3]">
+                            <img src="assets/concept.png" class="mb-4">
+                            <h4 class="font-semibold text-xl text-black mb-3">Concept</h4>
+                            <p class="text-[#494949]">The primary function of a house is to provide shelter from the elements and a safe environment for its occupants. This involves designing a structure that is durable, weather-resistant, and secure</p>
+                        </div>
+                        <div class=" rounded-lg p-5 bg-[#EFDA6E]">
+                            <img src="assets/flow-chart.png" class="mb-4">
+                            <h4 class="font-semibold text-xl text-black mb-3">Design Process</h4>
+                            <p class="text-[#494949]">The aesthetic concept of a house is often influenced by its architectural style, which could range from traditional to modern, minimalist to ornate. The style reflects the personal taste of the homeowner and the cultural or geographical context.</p>
+                        </div>
+                        <div class=" rounded-lg p-5 bg-[#A4DAC3]">
+                            <img src="assets/vision.png" class="mb-4">
+                            <h4 class="font-semibold text-xl text-black mb-3">Supervision</h4>
+                            <p class="text-[#494949]">A "supervision home" typically refers to a home that is constructed with a high level of oversight, ensuring that every aspect of the building process is meticulously managed and monitored</p>
+                        </div>
+                        <div class=" rounded-lg p-5 bg-[#77AAEA]">
+                            <img src="assets/budget-planning.png" class="mb-4">
+                            <h4 class="font-semibold text-xl text-black mb-3">Budget Planning</h4>
+                            <p class="text-[#494949]">Start by clearly defining what you want from your new home. Consider the size, style, number of rooms, special features, and any unique requirements you may have.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        <!--portfolio section-->
+        <section class="lg:bg-white">
+            <div class="container mx-auto  p-4 lg:p-20">
                 <!--title-->
                 <div class="text-center">
-                    <a class="btn  font-semi  rounded-full bg-white mb-4"><i class="fa-solid fa-arrow-right    rounded-full   text-black"></i>How we works </a>
-                    <h1 class="font-bold text-3xl text-black mb-5">Our Works Process</h1> 
-                    <p class="lg:w-7/12 mx-auto"> Define the scope of the project, including the size, style, and features of the home. Determine your needs, wants, and priorities.</p>
+                    <a class="btn  font-semi  rounded-full bg-[#ABEF5F33] mb-4"><i class="fa-solid fa-arrow-right    rounded-full   text-black"></i>Explore our Latest works </a>
+                    <h1 class="text-3xl font-bold text-black mb-5 ">Our Latest Portfolio</h1>
+                    <p class="lg:w-3/4 mx-auto mb-16">Creating a portfolio, especially in fields like architecture, interior design, or home building, involves showcasing your best work, demonstrating your skills, and communicating your design philosophy.</p>
                 </div>
-                <div class="grid grid-cols-1 lg:grid-cols-4 gap-5 p-6 mt-8">
-                    <div class=" rounded-lg p-5 bg-[#E7C1D3]">
-                        <img src="assets/concept.png" class="mb-4">
-                        <h4 class="font-semibold text-xl text-black mb-3">Concept</h4>
-                        <p class="text-[#494949]">The primary function of a house is to provide shelter from the elements and a safe environment for its occupants. This involves designing a structure that is durable, weather-resistant, and secure</p>
+                <div class="grid grid-cols-1  lg:grid-cols-3 lg:gap-5  ">
+                    <div class="lg:flex lg:col-span-2  p-6 bg-white rounded-xl  lg:gap-4 mb-5 lg:mb-0 border">
+                        <div class=" lg:w-full ">
+                            <img src="assets/img1.png " class="w-11/12 mx-auto lg:w-full lg:h-full">
+
+                        </div>
+                        <div>
+                            <h4 class="font-semibold text-xl mb-6 mt-7">Commercial</h4>
+                            <P class="mb-6">
+                                Creating a commercial portfolio, especially for fields like architecture, interior design, or construction, involves showcasing projects that demonstrate your expertise in commercial spaces</P>
+                            <a class="  font-bold text-xl ">View Details  <i class="fa-solid fa-arrow-right -rotate-45   rounded-full p-1 bg-[#ABEF5F] text-black"></i></a>
+                        </div>
                     </div>
-                    <div class=" rounded-lg p-5 bg-[#EFDA6E]">
-                        <img src="assets/flow-chart.png" class="mb-4">
-                        <h4 class="font-semibold text-xl text-black mb-3">Design Process</h4>
-                        <p class="text-[#494949]">The aesthetic concept of a house is often influenced by its architectural style, which could range from traditional to modern, minimalist to ornate. The style reflects the personal taste of the homeowner and the cultural or geographical context.</p>
+                    <div class="p-5 rounded-xl bg-white   border ">
+                        <img src="assets/img2.png" class="w-11/12 mx-auto lg:h-full ">
                     </div>
-                    <div class=" rounded-lg p-5 bg-[#A4DAC3]">
-                        <img src="assets/vision.png" class="mb-4">
-                        <h4 class="font-semibold text-xl text-black mb-3">Supervision</h4>
-                        <p class="text-[#494949]">A "supervision home" typically refers to a home that is constructed with a high level of oversight, ensuring that every aspect of the building process is meticulously managed and monitored</p>
+                </div>
+                <!--2nd row-->
+                <div class="lg:grid lg:grid-cols-4 flex flex-col-reverse mt-6  gap-4">
+                   <div class="p-5 rounded-xl bg-white   border ">
+                    <img src="assets/img3.png" class="w-11/12 mx-auto lg:h-full ">
+                
+                   </div> 
+
+                   <div class="lg:flex lg:col-span-2  p-6 bg-white rounded-xl  lg:gap-4 mb-5 lg:mb-0 border">
+                    <div class=" lg:w-[800px] ">
+                        <img src="assets/img4.png " class="w-11/12 mx-auto lg:w-full lg:h-full">
+
                     </div>
-                    <div class=" rounded-lg p-5 bg-[#77AAEA]">
-                        <img src="assets/budget-planning.png" class="mb-4">
-                        <h4 class="font-semibold text-xl text-black mb-3">Budget Planning</h4>
-                        <p class="text-[#494949]">Start by clearly defining what you want from your new home. Consider the size, style, number of rooms, special features, and any unique requirements you may have.</p>
+                    <div>
+                        <h4 class="font-semibold text-xl mb-6 mt-7">Commercial</h4>
+                        <P class="mb-6">
+                            Creating a commercial portfolio, especially for fields like architecture, interior design, or construction, involves showcasing projects that demonstrate your expertise in commercial spaces</P>
+                        <a class="  font-bold text-xl ">View Details  <i class="fa-solid fa-arrow-right -rotate-45   rounded-full p-1 bg-[#ABEF5F] text-black"></i></a>
                     </div>
+                </div>
+                <div  class="p-5 rounded-xl bg-white   border mb-4  lg:mb-0">
+                    <img src="assets/img5.png" class="w-11/12 mx-auto lg:h-full ">
+                
+                </div>
+                <div  class="lg:hidden  p-5 rounded-xl bg-white   border  mb-4">
+                    <img src="assets/img3.png" class="w-11/12 mx-auto lg:h-full ">
+                </div>
                 </div>
             </div>
+
         </section>
     </main>
     <!--main section end-->
