chnange some value

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                    </div> 
 
                    <div class="lg:flex lg:col-span-2  p-6 bg-white rounded-xl  lg:gap-4 mb-5 lg:mb-0 border">
-                    <div class=" lg:w-[800px] ">
+                    <div class=" lg:w-[850px]  object-cover">
                         <img src="assets/img4.png " class="w-11/12 mx-auto lg:w-full lg:h-full">
 
                     </div>
