chng some width vale

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <input type="text" placeholder="Last Name*" class="w-11/12 mb-5 h-[60px] rounded-xl p-4 ml-5 lg:mr-5  lg:w-[440px]">
                     <input type="text" placeholder="Phone Number*" class="w-11/12 mb-5 h-[60px] rounded-xl p-4 ml-5 lg:mr-5  lg:w-[440px]">
                     <input type="text" placeholder="Email Number*" class="w-11/12 mb-5 h-[60px] rounded-xl p-4 ml-5 lg:mr-5  lg:w-[440px]">
-                  <textarea rows="8"  class="ml-4 rounded-xl p-4 w-[315px] lg:w-[920px] mb-4" placeholder="Write your message here"></textarea>
+                  <textarea rows="8"  class="ml-4 rounded-xl p-4 w-11/12 lg:w-[920px] mb-4" placeholder="Write your message here"></textarea>
                   <div  class=" ml-4  lg:mr-11">
                   <a class="btn bg-[#ABEF5F] font-bold text-xl rounded-full w-full">Send Mail  <i class="fa-solid fa-arrow-right -rotate-45   rounded-full p-1 bg-black text-white"></i></a>
                 </div>
