add degin section

--- a/index.html
+++ b/index.html
@@ -231,6 +231,101 @@
             </div>
 
         </section>
+         <!--Architecture design section start-->
+    <section>
+        <div class="container mx-auto lg:p-20 p-5 ">
+            <div class="text-center">
+                <h1 class="text-3xl font-bold text-black mb-4">Some Architecture design </h1>
+                <p class="text-gray-500 lg:w-3/6 mx-auto lg:mb-20 mb-7">There are some design under the below. you can choice from these or you can also suggetion as your need what type of style you want.</p>
+            </div>
+            <div>
+                <div class="carousel w-full">
+                    <div id="slide1" class="carousel-item relative w-full ">
+                      <img
+                        src="image/r-architecture-rOk4VSMS3Ck-unsplash.jpg"
+                        class="w-full  mx-auto lg:h-[500px]" />
+                      <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide4" class="btn btn-circle  bg-[#ABEF5F]">❮</a>
+                        <a href="#slide2" class="btn btn-circle  bg-[#ABEF5F]">❯</a>
+                      </div>
+                      <!--box1-->
+                      <div class="bg-[#ABEF5F] text-black lg:h-20 lg:p-7 p-2 text-center rounded-xl absolute lg:bottom-0 -bottom-3 ">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star" ></i>
+                            <i class="fa-solid fa-star" ></i>
+                            <i class="fa-solid fa-star" ></i>    4/5
+                        </p>
+                        <p class="lg:text-2xl font-bold">$12.5</p>
+                      </div>
+                    </div>
+                    <div id="slide2" class="carousel-item relative w-full">
+                      <img
+                        src="image/r-architecture-oGmf8o53LeE-unsplash.jpg"
+                        class="w-full  mx-auto lg:h-[500px]" />
+                      <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1" class="btn btn-circle bg-[#ABEF5F]">❮</a>
+                        <a href="#slide3" class="btn btn-circle bg-[#ABEF5F]">❯</a>
+                      </div>
+                      <!--box2-->
+                      <div class="bg-[#ABEF5F] text-black lg:h-20 lg:p-7 p-2 text-center rounded-xl absolute lg:bottom-0 -bottom-3 ">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                           
+                            <i class="fa-solid fa-star" ></i>
+                            <i class="fa-solid fa-star" ></i>    3/5
+                        </p>
+                        <p class="lg:text-2xl font-bold">$22.5</p>
+                      </div>
+                    </div>
+                    <div id="slide3" class="carousel-item relative w-full">
+                      <img
+                        src="image/r-architecture-WQCkior21Gc-unsplash.jpg"
+                        class="w-full mx-auto lg:h-[500px] " />
+                      <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2" class="btn btn-circle bg-[#ABEF5F]">❮</a>
+                        <a href="#slide4" class="btn btn-circle bg-[#ABEF5F]">❯</a>
+                      </div>
+                      <!--box3-->
+                      <div class="bg-[#ABEF5F] text-black lg:h-20 lg:p-7 p-2 text-center rounded-xl absolute lg:bottom-0 -bottom-3 ">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star" ></i>
+                            <i class="fa-solid fa-star" ></i>
+                            <i class="fa-solid fa-star" ></i>
+                            <i class="fa-solid fa-star" ></i>    5/5
+                        </p>
+                        <p class="lg:text-2xl font-bold">$20.5</p>
+                      </div>
+                    </div>
+                    <div id="slide4" class="carousel-item relative w-full">
+                      <img
+                        src="image/r-architecture-z61hzeqMuow-unsplash.jpg"
+                        class="w-full  mx-auto lg:h-[500px]" />
+                      <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide3" class="btn btn-circle bg-[#ABEF5F]">❮</a>
+                        <a href="#slide1" class="btn btn-circle bg-[#ABEF5F]">❯</a>
+                      </div>
+                      <!--box4-->
+                      <div class="bg-[#ABEF5F] text-black lg:h-20 lg:p-7 p-2 text-center rounded-xl absolute lg:bottom-0 -bottom-3 ">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star" ></i>
+                            <i class="fa-solid fa-star" ></i>
+                            <i class="fa-solid fa-star" ></i>    4/5
+                        </p>
+                        <p class="lg:text-2xl font-bold">$22.5</p>
+                      </div>
+
+                    </div>
+                  </div>
+
+            </div>
+        </div>
+    </section>
+        <section>
+            <div class="h-4 bg-white"></div>
+        </section>
         <!--next project section -->
         <section >
            <div class="bg-[url('assets/bg.jpg')] bg-no-repeat bg-cover">
